@@ -34,7 +34,7 @@ import { IconLabelNodeConverter } from './IconLabelNodeConverter';
 import { ImageNodeConverter } from './ImageNodeConverter';
 import { ListNodeConverter } from './ListNodeConverter';
 import { RectangleNodeConverter } from './RectangleNodeConverter';
-import { convertLabelStyle, convertContentStyle } from './convertLabel';
+import { convertContentStyle, convertLabelStyle } from './convertLabel';
 
 const nodeDepth = (nodeId2node: Map<string, Node>, nodeId: string): number => {
   const node = nodeId2node.get(nodeId);
@@ -55,10 +55,6 @@ const convertEdgeLabel = (gqlEdgeLabel: GQLLabel): EdgeLabel => {
     text: gqlEdgeLabel.text,
     iconURL: gqlEdgeLabel.style.iconURL,
     style: {
-      position: 'absolute',
-      background: 'transparent',
-      padding: 5,
-      zIndex: 1001,
       ...convertLabelStyle(gqlEdgeLabel.style),
     },
     contentStyle: {
