@@ -102,9 +102,7 @@ export const EllipseNode = memo(({ data, id, selected, dragging }: NodeProps<Ell
         onDragOver={onDragOver}
         onDrop={handleOnDrop}
         data-testid={`Ellipse - ${data?.insideLabel?.text}`}>
-        {data.insideLabel ? (
-          <Label diagramElementId={id} label={data.insideLabel} faded={data.faded} transform="" />
-        ) : null}
+        {data.insideLabel ? <Label diagramElementId={id} label={data.insideLabel} faded={data.faded} /> : null}
         {selected ? (
           <DiagramElementPalette diagramElementId={id} labelId={data.insideLabel ? data.insideLabel.id : null} />
         ) : null}
